# coordnet

./: .dockerignore  .editorconfig  .eslintignore  .gitignore  .pre-commit-config.yaml  .pre-commit-run.sh  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  compose.frontend.yml  compose.yml  fly.hocuspocus.toml  fly.pgbouncer.toml  fly.rabbitmq.toml  fly.toml  manage.py  pyproject.toml
.envs/.local/: .crdt  .django  .django.secrets.example  .frontend  .hocuspocus  .minio  .postgres  .secrets.example
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  k8s.yml  publish.yml
backend/buddies/: admin.py  agent_prompts.py  apps.py  consumers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/config/: api_router.py  asgi.py  urls.py  views.py  wsgi.py
backend/coordnet/: __init__.py
backend/llms/: admin.py  models.py  utils.py
backend/nodes/: admin.py  apps.py  filters.py  models.py  serializers.py  (+6 more)
config/: api_router.py  celery_app.py
crdt/: package.json  pnpm-lock.yaml
docs/: redoc-static.html  schema.yml
frontend/: .gitignore  .prettierrc  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
kubernetes/: README.md  configmaps.yaml  deployments.yaml  jobs-django-migrate.yaml  kustomization.yaml  minio.yaml  namespace.yaml  secrets-template.yaml  services.yaml
node/: .prettierrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
nodes/: apps.py  models.py  serializers.py  urls.py
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt
users/: adapters.py  admin.py  apps.py  context_processors.py  urls.py
utils/: models.py  routers.py  serializers.py
(+701 files in other folders)
